--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Poppins", sans-serif;
+  min-height: 100vh;
+  background-color: #fff;
+}
+
+.spinner {
+  --d: 24.6px;
+  width: 4.5px;
+  height: 4.5px;
+  border-radius: 50%;
+  color: #474bff;
+  box-shadow: calc(1*var(--d))      calc(0*var(--d))     0 0,
+         calc(0.707*var(--d))  calc(0.707*var(--d)) 0 1.1px,
+         calc(0*var(--d))      calc(1*var(--d))     0 2.2px,
+         calc(-0.707*var(--d)) calc(0.707*var(--d)) 0 3.4px,
+         calc(-1*var(--d))     calc(0*var(--d))     0 4.5px,
+         calc(-0.707*var(--d)) calc(-0.707*var(--d))0 5.6px,
+         calc(0*var(--d))      calc(-1*var(--d))    0 6.7px;
+  animation: spinner-a90wxe 1s infinite steps(8);
+}
+
+@keyframes spinner-a90wxe {
+  100% {
+     transform: rotate(1turn);
+  }
 }
